After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669441 - Accessibility no longer works with gtk+ 3.2 and above
Accessibility no longer works with gtk+ 3.2 and above
Status: RESOLVED FIXED
Product: GtkHtml
Classification: Other
Component: html-editor-control
4.3.x
Other Linux
: Normal critical
: ---
Assigned To: gtkhtml-maintainers
gtkhtml-maintainers
: 691161 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-02-06 04:32 UTC by Mike Gorse
Modified: 2014-01-29 10:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Adjust to gtk+ a11y changes (8.12 KB, patch)
2013-01-08 02:28 UTC, Rui Matos
committed Details | Review
Alternate patch. (32.35 KB, patch)
2013-01-08 16:17 UTC, Mike Gorse
none Details | Review

Description Mike Gorse 2012-02-06 04:32:31 UTC
GTK's accessibility code was refactored in the 3.1 cycle to drop the external gail module. Accessibility classes are now built directly into gtk+, but there are no longer atk factory classes associated with the GtkAccessible-derived classes, so the code to fetch the atk class for a gtk widget via the factory no longer works. The current recommendation is for third-party widgets with custom implementations to derive atk classes from GtkAccessible and override gtk_accessible in the custom widget's class.
Comment 1 Matthew Barnes 2012-08-10 19:54:45 UTC
Was this bug meant for GTK+?
Comment 2 Mike Gorse 2012-08-16 14:13:55 UTC
Fetching an atk type via the factory no longer works with gtk+ 3.2 and later, so gtkhtml's custom atk implementations no longer work. I'd meant to update gtkhtml's a11y code to work with the latest gtk+. However, this post is relevant:
https://mail.gnome.org/archives/gtk-devel-list/2012-August/msg00001.html

Also, I'd prepared a patch and thought that I'd attached it, but it seems that I never did.
Comment 3 Matthew Barnes 2012-08-16 14:41:45 UTC
Probably not worth the effort at this point.  GtkHTML will likely be retired within the next 6-12 months.  Evolution is moving to WebKit/GTK+.
Comment 4 Rui Matos 2013-01-08 02:28:40 UTC
Created attachment 232950 [details] [review]
Adjust to gtk+ a11y changes

--

I got a bug report that gnome-shell's OSK wasn't working with the
evolution composer. After digging for a while in the code I ended up
fixing this. It would be nice to have this fixed but if the move to
webkitgtk+ is close it might not be worth it?
Comment 5 Rui Matos 2013-01-08 02:29:34 UTC
*** Bug 691161 has been marked as a duplicate of this bug. ***
Comment 6 Matthew Barnes 2013-01-08 03:54:46 UTC
(In reply to comment #4)
> I got a bug report that gnome-shell's OSK wasn't working with the
> evolution composer. After digging for a while in the code I ended up
> fixing this. It would be nice to have this fixed but if the move to
> webkitgtk+ is close it might not be worth it?

Thanks for the patch, but it looks like this requires a bleeding-edge gtk+ to build, so it's going to have to wait until GNOME 3.9.  I don't know if GtkHTML will even survive that long.
Comment 7 Mike Gorse 2013-01-08 16:17:35 UTC
Created attachment 232979 [details] [review]
Alternate patch.

I meant to upload this patch a long time ago but never did.
Rui's patch is much cleaner, although it needs gtk+ 3.7.4 (not released yet).
Comment 8 Mike Gorse 2014-01-03 19:26:17 UTC
Evolution is still using gtkhtml for the message composer, so, anyway, can we commit the patch in comment 5?
Comment 9 Milan Crha 2014-01-27 16:31:53 UTC
Review of attachment 232950 [details] [review]:

Please commit to master, make sure you'll bump the gtk+ version requirement as necessary. Thanks.
Comment 10 Rui Matos 2014-01-29 10:28:03 UTC
Pushed with the gtk+ version requirement bumped to 3.2.0.

Attachment 232950 [details] pushed as bf664ec - Adjust to gtk+ a11y changes