Adjust to gtk+ a11y changes

https://bugzilla.gnome.org/show_bug.cgi?id=669441