a11y/object.c
@@ -35,8 +35,10 @@
 
 static void gtk_html_a11y_class_init (GtkHTMLA11YClass *klass);
 static void gtk_html_a11y_init       (GtkHTMLA11Y *a11y);
+static void gtk_html_a11y_initialize (AtkObject *obj,
+                                      gpointer data);
 
-static GtkAccessibleClass *parent_class = NULL;
+static GtkContainerAccessibleClass *parent_class = NULL;
 
 static gint
 get_n_actions (AtkAction *action)
@@ -129,21 +131,7 @@ gtk_html_a11y_get_type (void)
 			NULL
 		};
 
-		/*
-		 * Figure out the size of the class and instance
-		 * we are deriving from
-		 */
-		AtkObjectFactory *factory;
-		GTypeQuery query;
-		GType derived_atk_type;
-
-		factory = atk_registry_get_factory (atk_get_default_registry (), GTK_TYPE_WIDGET);
-		derived_atk_type = atk_object_factory_get_accessible_type (factory);
-		g_type_query (derived_atk_type, &query);
-		tinfo.class_size = query.class_size;
-		tinfo.instance_size = query.instance_size;
-
-		type = g_type_register_static (derived_atk_type, "GtkHTMLA11Y", &tinfo, 0);
+		type = g_type_register_static (GTK_TYPE_CONTAINER_ACCESSIBLE, "GtkHTMLA11Y", &tinfo, 0);
 
 		g_type_add_interface_static (type, ATK_TYPE_ACTION, &atk_action_info);
 	}
@@ -155,18 +143,6 @@ static void
 gtk_html_a11y_finalize (GObject *obj)
 {
 	G_OBJECT_CLASS (parent_class)->finalize (obj);
-}
-
-static void
-gtk_html_a11y_initialize (AtkObject *obj,
-                          gpointer data)
-{
-	/* printf ("gtk_html_a11y_initialize\n"); */
-
-	if (ATK_OBJECT_CLASS (parent_class)->initialize)
-		ATK_OBJECT_CLASS (parent_class)->initialize (obj, data);
-
-	g_object_set_data (G_OBJECT (obj), GTK_HTML_ID, data);
 }
 
 static gint
@@ -386,22 +362,27 @@ gtk_html_a11y_delete_object_cb (GtkWidget *widget,
 	}
 }
 
-AtkObject *
-gtk_html_a11y_new (GtkWidget *widget)
+static void
+gtk_html_a11y_initialize (AtkObject *obj,
+                          gpointer data)
 {
+	GtkWidget *widget;
 	GtkHTML *html;
-	GObject *object;
 	AtkObject *accessible;
 	AtkObject *focus_object = NULL;
 
-	g_return_val_if_fail (GTK_IS_HTML (widget), NULL);
+	/* printf ("gtk_html_a11y_initialize\n"); */
 
-	object = g_object_new (G_TYPE_GTK_HTML_A11Y, NULL);
+	if (ATK_OBJECT_CLASS (parent_class)->initialize)
+		ATK_OBJECT_CLASS (parent_class)->initialize (obj, data);
 
-	accessible = ATK_OBJECT (object);
-	atk_object_initialize (accessible, widget);
+	g_object_set_data (G_OBJECT (obj), GTK_HTML_ID, data);
 
-	accessible->role = ATK_ROLE_PANEL;
+	obj->role = ATK_ROLE_PANEL;
+
+	widget = gtk_accessible_get_widget (GTK_ACCESSIBLE (obj));
+	accessible = ATK_OBJECT (obj);
+
 	g_signal_connect (widget, "grab_focus",
 			G_CALLBACK (gtk_html_a11y_grab_focus_cb),
 			NULL);
@@ -426,6 +407,4 @@ gtk_html_a11y_new (GtkWidget *widget)
 		gtk_html_a11y_focus_object = focus_object;
 		atk_focus_tracker_notify (focus_object);
 	}
-
-	return accessible;
 }
